--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # version: 1.0.0+1
 # Edited by 이종현 ('23.08.24)
-version: 2.1.0+55
+version: 2.1.0+56
 
 environment:
   sdk: ">=3.0.6 <4.0.0"
@@ -48,6 +48,9 @@ dependencies:
   firebase_messaging: ^14.6.7
   flutter_local_notifications: ^9.1.5
   flutter_webview_pro: ^3.0.1+4
+  dio: ^5.3.2
+  path_provider: ^2.1.0
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
