--- a/android/keystore.properties
+++ b/android/keystore.properties
@@ -3,5 +3,11 @@ keyPassword=bok12#$
 keyAlias=bokdaeri
 storeFile=/Users/gimdaehyeon/IdeaProjects/bokdaeri_hybrid.source.20230607/android/bokdaeri.jks
 applicationId=kr.co.lawired.bok
-versionCode=66
-versionName=2.1.0
+#versionCode=66
+#versionName=2.1.0
+
+## For Debugging ##
+# Uncomment this line after build new appBundle file.
+versionCode=53
+versionName=1.5.0
+## END ##
