--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-# version: 1.0.0+1
+version: 1.0.0+1
 # Edited by 이종현 ('23.08.24)
-version: 2.1.0+66
+# version: 2.1.0+66
 
 environment:
   sdk: ">=3.0.6 <4.0.0"
@@ -51,6 +51,7 @@ dependencies:
   dio: ^5.3.2
   path_provider: ^2.1.0
   open_file: ^3.3.2
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
