--- a/android/keystore.properties
+++ b/android/keystore.properties
@@ -1,13 +1,17 @@
 storePassword=bok12#$
 keyPassword=bok12#$
 keyAlias=bokdaeri
-storeFile=/Users/gimdaehyeon/IdeaProjects/bokdaeri_hybrid.source.20230607/android/bokdaeri.jks
+storeFile=/Users/gimdaehyeon/IdeaProjects/bokdaeri_hybrid.source.20230831/android/bokdaeri.jks
 applicationId=kr.co.lawired.bok
+## Newest Release Version ##
 #versionCode=66
 #versionName=2.1.0
+## END ##
 
 ## For Debugging ##
 # Uncomment this line after build new appBundle file.
 versionCode=53
 versionName=1.5.0
+#versionCode=54
+#versionName=2.0.0
 ## END ##
