--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -50,8 +50,8 @@ android {
 
     defaultConfig {
         applicationId keystoreProperties["applicationId"]
-        minSdkVersion 27
-        targetSdkVersion 33
+        minSdkVersion 29
+        targetSdkVersion 34
         versionCode keystoreProperties["versionCode"].toInteger()
         versionName keystoreProperties["versionName"]
     }
@@ -84,4 +84,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
     implementation 'com.google.android.play:integrity:1.2.0'
+    implementation 'com.google.android.material:material:1.12.0-alpha01'
 }
